--- a/config.yml
+++ b/config.yml
@@ -30,9 +30,9 @@ params:
     - name: "github"
       url: "https://github.com/mariuskimmina"
     - name: "linkedin"
-      url: "https://github.com/mariuskimmina"
-    - name: "linkedin"
       url: "https://www.linkedin.com/in/marius-kimmina/"
+    - name: "stackoverflow"
+      url: "https://stackoverflow.com/users/13693791"
     - name: "hackthebox"
       url: "https://app.hackthebox.com/profile/36525"
   profileMode:
