--- a/config.yml
+++ b/config.yml
@@ -32,7 +32,7 @@ params:
     - name: "linkedin"
       url: "https://www.linkedin.com/in/marius-kimmina/"
     - name: "stackoverflow"
-      url: "https://stackoverflow.com/users/13693791/marius-kimmina?tab=profile"
+      url: "https://stackoverflow.com/users/13693791"
     - name: "hackthebox"
       url: "https://app.hackthebox.com/profile/36525"
   profileMode:
