--- a/config.yml
+++ b/config.yml
@@ -39,7 +39,7 @@ params:
       url: "https://app.hackthebox.com/profile/36525"
   profileMode:
     enabled: true
-    subtitle: "Building IT-Infrastructure that scales\n Contributing to open-source software \n Always learning"
+    subtitle: "I'm building IT-Infrastructure that scales, contribute to open-source software and am always looking to learn something new"
     imageUrl: "/profile/pic4.jpg" # optional
     imageTitle: "alt text" # optional
       #imageWidth: 120 # custom size
