--- a/config.yml
+++ b/config.yml
@@ -39,7 +39,8 @@ params:
       url: "https://app.hackthebox.com/profile/36525"
   profileMode:
     enabled: true
-    subtitle: "I'm building IT-Infrastructure that scales, contribute to open-source software and am always looking to learn something new"
+      #subtitle: "I'm building IT-Infrastructure that scales, contribute to open-source software and am always looking to learn something new"
+    subtitle: "Happy but never satisfied"
     imageUrl: "/profile/pic4.jpg" # optional
     imageTitle: "alt text" # optional
       #imageWidth: 120 # custom size
