--- a/config.yml
+++ b/config.yml
@@ -13,10 +13,6 @@ menu:
     name: Hacks
     url: /hacks/
     weight: 20
-  - identifier: HowTo
-    name: HowTo
-    url: /howto/
-    weight: 30
   - identifier: projects
     name: Projects
     url: /projects
@@ -45,7 +41,7 @@ params:
     enabled: true
     subtitle: "Trying Failing Learning"
     imageUrl: "/profile/pic4.jpg" # optional
-    imageTitle: "alt text" # optional
+    imageTitle: "Marius Kimmina" # optional
       #imageWidth: 120 # custom size
       #imageHeight: 120 # custom size
     buttons:
