--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -20,8 +20,8 @@ bio = "IT Infrastructure at scale"
 links = [
     { linkedin = "https://linkedin.com/in/mariuskimmina" },
     { github = "https://github.com/mariuskimmina" },
-    { link = { href = "https://www.goodreads.com/user/show/152870707-marius-kimmina", text = "Goodreads", icon = "goodreads" } },
-    { link = { href = "https://stackoverflow.com/users/userid/username", text = "StackOverflow", icon = "stackoverflow" } },
+    { goodreads = "https://www.goodreads.com/user/show/152870707-marius-kimmina" },
+    { link = "https://stackoverflow.com/users/userid/username" },
     { twitter = "https://twitter.com/marius_kimmina" },
     #{ twitch = "https://twitch.tv/username" },
     #{ youtube = "https://youtube.com/username" },
