--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -21,8 +21,8 @@ links = [
     { linkedin = "https://linkedin.com/in/mariuskimmina" },
     { github = "https://github.com/mariuskimmina" },
     { goodreads = "https://www.goodreads.com/user/show/152870707-marius-kimmina" },
-    { link = "https://stackoverflow.com/users/13693791/marius-kimmina" },
-    { twitter = "https://twitter.com/marius_kimmina" },
+    { stackoverflow = "https://stackoverflow.com/users/13693791/marius-kimmina" },
+    { twitter = "https://twitter.com/mariuskimmina" },
     #{ twitch = "https://twitch.tv/username" },
     #{ youtube = "https://youtube.com/username" },
   #   { email = "mailto:hello@your_domain.com" },
