--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -22,7 +22,8 @@ links = [
     { github = "https://github.com/mariuskimmina" },
     { goodreads = "https://www.goodreads.com/user/show/152870707-marius-kimmina" },
     { stack-overflow = "https://stackoverflow.com/users/13693791/marius-kimmina" },
-    { twitter = "https://twitter.com/mariuskimmina" },
+    { mastodon = "https://mastodon.social/@MariusKimmina" },
+    { reddit = "https://reddit.com/user/mariuskimmina" },
     { ko-fi = "https://ko-fi.com/mariuskimmina" },
     #{ twitch = "https://twitch.tv/username" },
     #{ youtube = "https://youtube.com/username" },
@@ -45,13 +46,11 @@ links = [
   #   { keybase = "https://keybase.io/username" },
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
-  #   { mastodon = "https://mastodon.instance/@username" },
   #   { medium = "https://medium.com/username" },
   #   { microsoft = "https://www.microsoft.com/" },
   #   { orcid = "https://orcid.org/userid" },
   #   { patreon = "https://www.patreon.com/username" },
   #   { pinterest = "https://pinterest.com/username" },
-  #   { reddit = "https://reddit.com/user/username" },
   #   { researchgate = "https://www.researchgate.net/profile/username" },
   #   { slack = "https://workspace.url/team/userid" },
   #   { snapchat = "https://snapchat.com/add/username" },
