--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -24,6 +24,10 @@
   pageRef = "hacks"
   weight = 20
 [[main]]
+  name = "Summaries"
+  pageRef = "summaries"
+  weight = 30
+[[main]]
   name = "Projects"
   pageRef = "projects"
   weight = 40
