--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -20,8 +20,7 @@ bio = "IT Infrastructure at scale"
 links = [
     { linkedin = "https://linkedin.com/in/mariuskimmina" },
     { github = "https://github.com/mariuskimmina" },
-    { goodreads = "https://www.goodreads.com/user/show/152870707-marius-kimmina" },
-    { stack-overflow = "https://stackoverflow.com/users/13693791/marius-kimmina" },
+    { instagram = "https://instagram.com/mariuskimmina" },
     { mastodon = "https://infosec.exchange/@MariusKimmina" },
     { reddit = "https://reddit.com/user/mariuskimmina" },
     { ko-fi = "https://ko-fi.com/mariuskimmina" },
@@ -42,7 +41,6 @@ links = [
   #   { gitlab = "https://gitlab.com/username" },
   #   { google = "https://www.google.com/" },
   #   { hashnode = "https://username.hashnode.dev" },
-  #   { instagram = "https://instagram.com/username" },
   #   { keybase = "https://keybase.io/username" },
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
